# SensorAnalysisToolkit

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
docs/: STKDoxyFile
docs/html/: annotated.html  classes.html  classstk_1_1IO-members.html  classstk_1_1IO.html  classstk_1_1IOImageStack-members.html  classstk_1_1IOImageStack.html  classstk_1_1Image-members.html  classstk_1_1Image.html  classstk_1_1ImageStack-members.html  classstk_1_1ImageStack.html  files.html  functions.html  functions_func.html  index.html  stkImageStack_8h_source.html  stkImage_8h_source.html  stkRawImageIO_8h_source.html  stkRawImageStackIO_8h_source.html
docs/html/search/: all_62.html  all_66.html  all_69.html  all_6d.html  all_7e.html  classes_69.html  functions_69.html  functions_6e.html  functions_72.html  functions_73.html  functions_77.html  search.js
docs/latex/: annotated.tex  classstk_1_1IO.tex  classstk_1_1IOImageStack.tex  classstk_1_1Image.tex  classstk_1_1ImageStack.tex  doxygen.sty  refman.tex
examples/BadPixelRemoval/: BadPixelRemoval.cxx  CMakeLists.txt
examples/BasicImageProcessing/: BasicImageProcessing.cxx  CMakeLists.txt
examples/FlatFieldCorrection/: CMakeLists.txt  FlatFieldCorrection.cxx
examples/ImageResize/: CMakeLists.txt  ImageResize.cxx
examples/MaskGenerator/: CMakeLists.txt  MaskGenerator.cxx
examples/PedestalCalculation/: CMakeLists.txt  PedestalCalculation.cxx
examples/PedestalCalculationWithHistogram/: CMakeLists.txt  PedestalCalculationWithHistogram.cxx
examples/SliceComparison/: CMakeLists.txt  SliceComparison.cxx
examples/VarianceCalculation/: CMakeLists.txt  VarianceCalculation.cxx
modules/: CMakeLists.txt
modules/Base/Image/: CMakeLists.txt
modules/Base/Image/include/: stkImage.h  stkImage.hxx
modules/Base/Image/test/: CMakeLists.txt  stkImageUnitTest.cxx
modules/Base/ImageStack/: CMakeLists.txt
modules/Base/ImageStack/include/: stkImageStack.h  stkImageStack.hxx
modules/Base/ImageStack/test/: CMakeLists.txt  stkImageStackUnitTest.cxx
modules/IO/RawIO/: CMakeLists.txt
modules/IO/RawIO/include/: stkRawImageIO.h  stkRawImageIO.hxx
modules/IO/RawIO/test/: CMakeLists.txt  stkRawImageIOUnitTest.cxx
modules/IO/RawIOImageStack/: CMakeLists.txt
modules/IO/RawIOImageStack/include/: stkRawImageStackIO.h  stkRawImageStackIO.hxx
modules/IO/RawIOImageStack/test/: CMakeLists.txt  stkRawImageStackIOUnitTest.cxx
modules/ImageCalculations/ImageBadPixelAverage/: CMakeLists.txt
modules/ImageCalculations/ImageBadPixelAverage/include/: stkImageBadPixelAverage.h  stkImageBadPixelAverage.hxx
modules/ImageCalculations/ImageBadPixelAverage/test/: CMakeLists.txt  stkImageBadPixelAverageTest.cxx
modules/ImageCalculations/ImageDivision/: CMakeLists.txt
modules/ImageCalculations/ImageDivision/include/: stkImageDivision.h  stkImageDivision.hxx
modules/ImageCalculations/ImageDivision/test/: CMakeLists.txt  stkImageDivisionUnitTest.cxx
modules/ImageCalculations/ImageFlatFieldCorrection/: CMakeLists.txt
modules/ImageCalculations/ImageFlatFieldCorrection/include/: stkImageFlatFieldCorrection.h  stkImageFlatFieldCorrection.hxx
modules/ImageCalculations/ImageMask/: CMakeLists.txt
modules/ImageCalculations/ImageMask/include/: stkImageMask.h  stkImageMask.hxx
modules/ImageCalculations/ImageMask/test/: CMakeLists.txt  stkImageMaskTest.cxx
modules/ImageCalculations/ImageMinus/: CMakeLists.txt
modules/ImageCalculations/ImageMinus/include/: stkImageMinus.h  stkImageMinus.hxx
modules/ImageCalculations/ImageMinus/test/: CMakeLists.txt  stkImageMinusTest.cxx
modules/ImageCalculations/ImageResize/: CMakeLists.txt
modules/ImageCalculations/ImageResize/include/: stkImageResize.h  stkImageResize.hxx
modules/ImageCalculations/ImageResize/test/: CMakeLists.txt  stkImageResizeTest.cxx
modules/ImageCalculations/ImageSquare/: CMakeLists.txt
modules/ImageCalculations/ImageSquare/include/: stkImageSquare.h  stkImageSquare.hxx
modules/ImageCalculations/ImageSquare/test/: CMakeLists.txt  stkImageSquareTest.cxx
modules/ImageCalculations/ImageSubtract/: CMakeLists.txt
modules/ImageCalculations/ImageSubtract/include/: stkImageSubtract.h  stkImageSubtract.hxx
modules/ImageCalculations/ImageSubtract/test/: CMakeLists.txt  stkImageSubractTest.cxx
modules/ImageCalculations/ImageSum/: CMakeLists.txt
modules/ImageCalculations/ImageSum/include/: stkImageSum.h  stkImageSum.hxx
modules/ImageCalculations/ImageSum/test/: CMakeLists.txt  stkImageSumUnitTest.cxx
modules/ImageCalculations/ImageVariance/: CMakeLists.txt
modules/ImageCalculations/ImageVariance/include/: stkImageVariance.h  stkImageVariance.hxx
modules/ImageCalculations/ImageVariance/test/: CMakeLists.txt  stkImageVarianceTest.cxx
modules/Plotting/Histograms/: CMakeLists.txt
modules/Plotting/Histograms/include/: stkImageHistogram.h  stkImageHistogram.hxx
modules/Plotting/Histograms/test/: CMakeLists.txt  stkImageHistogramUnitTest.cxx
testing/data/: testWrite.raw
