cmake_minimum_required (VERSION 2.8)

set(PROJECT_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(ROOT_DIR $ENV{ROOTSYS}/cmake)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} $ENV{ROOTSYS}/cmake/modules)

project (SensorAnalysisToolKit)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

add_subdirectory (${PROJECT_BASE_DIR}/modules)
